syntax = "proto3";
package DomainServices.CaseService;
option csharp_namespace = "DomainServices.CaseService.Contracts";

import "Messages/UpdatedInStarbuildStates.proto";

message UpdateCaseStateRequest {
	int64 CaseId = 1;

	// Novy status Case
	int32 State = 2;

	UpdatedInStarbuildStates StateUpdatedInStarbuild = 3;
}
