syntax = "proto3";
package DomainServices.HouseholdService.v1;
option csharp_namespace = "DomainServices.HouseholdService.Contracts.v1";

import "google/protobuf/empty.proto";
import "CreateHousehold.proto";
import "GetHouseholdRequest.proto";
import "GetHouseholdList.proto";
import "Household.proto";
import "UpdateHousehold.proto";
import "LinkCustomerOnSAToHousehold.proto";
import "DeleteHousehold.proto";

service HouseholdService {
    rpc CreateHousehold (CreateHouseholdRequest) returns (CreateHouseholdResponse);
    
    rpc DeleteHousehold (DeleteHouseholdRequest) returns (google.protobuf.Empty);
    
    rpc GetHousehold (GetHouseholdRequest) returns (Household);
    
    rpc GetHouseholdList (GetHouseholdListRequest) returns (GetHouseholdListResponse);
    
    rpc UpdateHousehold (UpdateHouseholdRequest) returns (google.protobuf.Empty);

    rpc LinkCustomerOnSAToHousehold (LinkCustomerOnSAToHouseholdRequest) returns (google.protobuf.Empty);
}